@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.387.2.27 2008/04/01 18:41:58 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.387.2.28 2008/04/02 02:08:56 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -10972,6 +10972,17 @@ C ... and restart the table:
  The optional parameter, a permutation of letters rgb, determines the sequence of
  r,g,b profiles drawn one after the other --- try this yourself for `set palette
  gray`. The default sequence is rgb.
+2 undefine
+?commands undefine
+?undefine
+ Clear one or more previously defined user variables.  This is useful in order
+ to reset the state of a script containing an initialization test.
+
+ Example:
+
+       undefine foo foo1 foo2
+       if (!exists("foo")) load "initialize.gp"
+
 2 unset
 ?commands unset
 ?unset
